# global-entry-appointment-checker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: prod.env  test.env
global_entry_appointment_checker/: main.py  notify.py  schemas.py  settings.py
