[tool.poetry]
name = "global-entry-appointment-checker"
version = "0.1.0"
description = ""
authors = ["Joey Demple <jsdemple@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
types-requests = "^2.27.11"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
mypy = "^0.931"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
